--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
             </h1>
             <ul class="nav-list">
                 <li class="nav-list-item">
-                    <button id="modal-open-r">ルール</button>
+                    <button id="modal-open-rule">ルール</button>
+                </li>
+                <li class="nav-list-item">
+                    <button id="restart" onclick="reload()">はじめから</button>
                 </li>    
             </ul>    
         </header>
@@ -36,6 +39,14 @@
         </div>
         
         <div class="div-mid">
+            <div class="modal-content" id="modal-content-result">
+                <h1 id="clear-time"></h1>
+                <h1 id="penalty"></h1>
+                <hr size="3" color="000000">
+                <h1 id="final-score"></h1>
+                <h1>シェア：[twitter]</h1>
+            </div>
+            
             <div id="b" class="mid-item"></div>
             <div id="c" class="mid-item"><input id="im-p-0" type="image" src="./materials/processed/karuta/im0.png" alt="カルタ" onclick="Judge(this);"></div>
             <div id="d" class="mid-item"><input id="im-p-1" type="image" src="./materials/processed/karuta/im1.png" alt="カルタ" onclick="Judge(this);"></div>
