タイトルロゴ追加・スタイル修正

--- a/public/index.html
+++ b/public/index.html
@@ -5,22 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>トム・ブラウンかるた</title>
     <link rel="icon" href="/assets/processed/icon/tori_karaage.gif">
-    <link rel="stylesheet" href="/css/header.css">
     <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/header.css">
     <link rel="stylesheet" href="/css/footer.css">
     <script src="/js/main.js" type="module" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Palette+Mosaic&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Darumadrop+One&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400&family=Concert+One&family=Shippori+Antique&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Kaisei+Tokumin:wght@400;500;700;800&family=Palette+Mosaic&family=Shippori+Mincho+B1:wght@400;500;600;700;800&family=Zen+Old+Mincho&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <!-- header -->
-    <header class="zigzag">
+    <header>
         <h1 class="headline">
-            <a>トム・ブラウンかるた</a>
+            <a><img id="title-logo" src="/assets/processed/logo/title.svg"></a>
         </h1>
         <ul class="nav-list">
             <li class="nav-list-item">
@@ -102,7 +100,7 @@
     <div class="modal-overlay" id="modal-overlay"></div>
 
     <!-- footer -->
-    <footer class="zigzag">
+    <footer class="copyright">
         <p>©2022 @and-2353. All rights reserved.</p>
     </footer>
     <!----- /footer ----->
