モーダルのスタイル変更(リザルトのみ)

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <script src="/js/main.js" type="module" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Kaisei+Tokumin:wght@400;500;700;800&family=Palette+Mosaic&family=Shippori+Mincho+B1:wght@400;500;600;700;800&family=Zen+Old+Mincho&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Kaisei+Tokumin:wght@400;500;700;800&family=Palette+Mosaic&family=Shippori+Antique&family=Shippori+Mincho+B1:wght@400;500;600;700;800&family=Zen+Old+Mincho&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -44,18 +44,35 @@
                 <span id="animated-text">ケンタッキーは…</span>
             </h1>
         </div>
+        <div id="b" class="elapsed-time">
+            <p class="elapsed-time">
+                <span class="title" id="elapsed-time"> 20.12</span>秒
+            </p>
+        </div>
+            
     </div>
 
     <div class="div-mid">
         <div class="modal-content" id="modal-content-result">
-            <h1 id="clear-time"></h1>
-            <h1 id="penalty"></h1>
-            <hr size="3" color="000000">
-            <h1 id="final-score"></h1>
-            <div id="share"></div>
-            <a href="javascript:void(0)" class="btn btn-malformation" id="close-result">もどる</a>
-            <a href="javascript:void(0)" class="btn btn-malformation" id="restart-result">はじめから</a>
+            <h1 class="modal-title">リザルト</h1>
+            <div class="modal-body">
+                <p class="time">
+                    <span class="label">クリアタイム: </span> <span class="value" id="clear-time">0</span> 秒
+                </p>
+                <p class="penalty">
+                    <span class="label">ペナルティ: </span> <span class="value" id="penalty-time">0</span> 秒（ミス <span class="value" id="penalty-num">0</span> 回）
+                </p>
+                <div class="final-score">
+                    最終スコア: <span class="value" id="final-score">0</span> 秒
+                </div>
+                <div id="share"></div>
+                <div class="modal-buttons">
+                    <a href="javascript:void(0)" class="btn btn-malformation" id="close-result">もどる</a>
+                    <a href="javascript:void(0)" class="btn btn-malformation" id="restart-result">はじめから</a>
+                </div>
+            </div>
         </div>
+        
         <div class="modal-content" id="modal-content-rule" style="display: none;">
             <h1>正しく繋がるものを選びましょう</h1>
             <h1>ミスが少なく解答が早いほど高いスコアが出ます</h1>
