モーダルスタイル変更完了、経過時間表示、シェアボタン修正、スタイル調整

--- a/public/index.html
+++ b/public/index.html
@@ -46,10 +46,9 @@
         </div>
         <div id="b" class="elapsed-time">
             <p class="elapsed-time">
-                <span class="title" id="elapsed-time"> 20.12</span>秒
+                <span class="title">経過時間:</span> <span id="elapsed-time">0.00</span>秒
             </p>
         </div>
-            
     </div>
 
     <div class="div-mid">
@@ -74,10 +73,18 @@
         </div>
         
         <div class="modal-content" id="modal-content-rule" style="display: none;">
-            <h1>正しく繋がるものを選びましょう</h1>
-            <h1>ミスが少なく解答が早いほど高いスコアが出ます</h1>
-            <a href="javascript:void(0)" class="btn btn-malformation" id="close-rule">もどる</a>
-            <a href="javascript:void(0)" class="btn btn-malformation" id="restart-rule">はじめから</a>
+            <h1 class="modal-title">ルール</h1>
+            <div class="modal-body">
+                <p class="rule">
+                    <span class="label">
+                        問題文に正しく繋がるカルタを選んでください
+                    </span>
+                </p>
+                <div class="modal-buttons">
+                    <a href="javascript:void(0)" class="btn btn-malformation" id="close-rule">もどる</a>
+                    <a href="javascript:void(0)" class="btn btn-malformation" id="restart-rule">はじめから</a>
+                </div>
+            </div>
         </div>
 
         <div class="div-mid">
