背景画像が切り替わらないバグの修正

--- a/public/index.html
+++ b/public/index.html
@@ -102,7 +102,9 @@
 
     <div class="div-bottom">
         <span class="bottom-row">
-            <div id="h" class="bottom-left-item"><img id="image_nunokawa" src="/assets/processed/background/nunokawa1.png"></div>
+            <div id="h" class="bottom-left-item">
+                <img id="image_nunokawa" src="/assets/processed/background/nunokawa1.png">
+            </div>
             <div id="i" class="bottom-item">
                 <table class="result-table">
                     <tr>
@@ -117,7 +119,9 @@
                     <a href="javascript:void(0)" class="btn btn-malformation" id="next" style="visibility: hidden;">NEXT</a>
                 </div>
             </div>
-            <div id="j" class="bottom-right-item"><img id="image_mitio" src="/assets/processed/background/mitio1.png"></div>
+            <div id="j" class="bottom-right-item">
+                <img id="image_mitio" src="/assets/processed/background/mitio1.png">
+            </div>
         </span>
     </div>
 
